fixed user profile page (not centered)

--- a/assets/css/profile.css
+++ b/assets/css/profile.css
@@ -1,8 +1,7 @@
 .user-information {
-    padding: 10px;
+    padding: 2rem;
     font-size: 1.1rem;
     border: 1px solid var(--color-gray);
-    /* border-radius: 10px; */
     color: var(--color-white);
     max-width: 800px;
 }
